--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nrwl/react": "^19.8.4",
     "@nx/js": "21.0.3",
     "@nx/workspace": "21.0.3",
     "nx": "21.0.3"
