--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "user-profile/Module": ["apps/user-profile/src/remote-entry.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
