--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,16 +76,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build host (prod)
-        run: npx nx build host --configuration=production
+      # 1) Build all affected projects
+      - name: Build affected projects
+        run: npx nx affected:build --base=origin/main --head=HEAD --configuration=production
 
-      - name: Build user-profile (prod)
-        run: npx nx build user-profile --configuration=production
-
-      - name: Deploy host to S3
+      # 2) Deploy each affected app in dist/apps/<app> to s3://my-mfe-workspace/<app>
+      - name: Deploy affected apps to S3
         run: |
-          aws s3 sync dist/apps/host s3://my-mfe-workspace/host --delete
-
-      - name: Deploy user-profile to S3
-        run: |
-          aws s3 sync dist/apps/user-profile s3://my-mfe-workspace/user-profile --delete
+          # get a plain list of affected apps
+          apps=$(npx nx affected:apps --plain --base=origin/main --head=HEAD)
+          echo "Deploying these apps: $apps"
+          for app in $apps; do
+            echo "→ syncing dist/apps/$app → s3://my-mfe-workspace/$app"
+            aws s3 sync "dist/apps/$app" "s3://my-mfe-workspace/$app" --delete
+          done
